# python-ezenv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ezenv.py  pyproject.toml  requirements.txt  virt.py
