[project]
requires-python = ">=3.10"
name = "ezenv"
version = "0.2"
dependencies = ["virtualenv"]
authors = [{ name = "dimsi", email = "dimosh3k@gmail.com" }]

[project.optional-dependencies]
dev = ["black", "pip-tools"]

[project.scripts]
ezenv = "ezenv:cli"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".vscode"]
# include = [".env"]
